2012-02-21

	* src/prefs_filter.c: fixed a bug that filter settings are removed
	  if Escape key is pressed quickly on auto filter rule creation.
	  Also made it update filter.xml file only when the list is modified.

2012-01-20

	* libsylph/imap.c: emit "add-msg", "remove-msg", "remove-all-msg",
	  "move-folder" and "remove-folder" signals.

2012-01-20

	* libsylph/news.c
	  libsylph/nntp.[ch]: supported SOCKS proxy.

2012-01-19

	* src/prefs_filter_edit.[ch]: made 'is shorter than' default for 'Age'
	  condition.

2012-01-18

	* src/plugin.[ch]
	  src/plugin-marshal.list
	  src/prefs_template.c
	  src/prefs_common_dialog.c
	  src/prefs_filter_edit.c
	  src/prefs_account_dialog.c
	  src/prefs_filter.c
	  src/plugin_manager.c: added new plug-in signals for preferences
	  dialogs (#30).

2012-01-11

	* src/messageview.c: add .eml extension like summary_save_as().
	* src/summaryview.c: summary_set_row(): show as '(No Subject)'
	  when subject is empty string.

2012-01-06

	* src/inc.c
	  src/plugin.[ch]
	  src/plugin-marshal.list
	  plugin/test/test.c: added new plug-in signals (#10):
	  "inc-mail-start": notify start of receiving
	  "inc-mail-finished": notify end of receiving and number of new
	  messages

2012-01-06

	* src/trayicon.c: extended the blinking period of tray icon to 10
	  seconds.

2012-01-06

	* manual/ja/sylpheed.sgml: updated Japanese manual.

2012-01-05

	* src/prefs_common_dialog.c: fixed a typo.

2011-12-27

	* version 3.2.0beta5

2011-12-26

	* src/rpop3.c: added refresh (reload) menu.

2011-12-22

	* src/rpop3.c: implemented reloading after the loading stopped.

2011-12-21

	* src/rpop3.c: supported SOCKS proxy.
	  Receive message headers from the latest one.

2011-12-21

	* libsylph/imap.c:
	  imap_session_get()
	  imap_cmd_noop(): check the activity of session, and return NULL
	  if busy. This fixes crashes when message fetch and new message
	  checking happen at the same time.

2011-12-16
