@@ -9,8 +9,8 @@ MINOR_VERSION=2
 MICRO_VERSION=0
 INTERFACE_AGE=0
 BINARY_AGE=0
-EXTRA_VERSION=beta5
-BUILD_REVISION=1130
+EXTRA_VERSION=beta6
+BUILD_REVISION=1131
 VERSION=$MAJOR_VERSION.$MINOR_VERSION.$MICRO_VERSION$EXTRA_VERSION
 
 dnl define if this is a development release
