@@ -6,11 +6,11 @@ test_la_SOURCES = test.c test.h
 test_la_LDFLAGS = -module -no-undefined -avoid-version
 
 INCLUDES = \
-	$(GTK_CFLAGS) \
-	-I$(includedir) \
 	-I$(top_srcdir) \
 	-I$(top_srcdir)/libsylph \
-	-I$(top_srcdir)/src
+	-I$(top_srcdir)/src \
+	$(GTK_CFLAGS) \
+	-I$(includedir)
 
 test_la_LIBADD = \
 	$(GTK_LIBS) \
